hide copied text on mobile devices

--- a/src/sass/4-components/TextField.styles.scss
+++ b/src/sass/4-components/TextField.styles.scss
@@ -45,6 +45,9 @@
 
     &-text {
       margin-right: 16px;
+      @include responsive(mb) {
+        display: none;
+      }
     }
 
     &.is-copied:hover {
